--- a/CSS/style_index.css
+++ b/CSS/style_index.css
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
 
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 body {
@@ -106,7 +106,7 @@ Intro Page
 Work Page 
 ********/
 .work {
-  height: 120vh;
+  height: 140vh;
 
   background-color: rgb(240, 240, 50);
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffe032+0,ffe032+49,fccc2f+49,fccc2f+100 */
@@ -142,18 +142,25 @@ Project General
   align-items: baseline;
   flex-wrap: wrap;
   
-  margin-bottom: 15em;
+  margin-bottom: 8em;
 
   /*****
   JS
   *****/
   transform: translateY(80px);
   opacity: 0;
+}
 
+.project_description {
+  font-weight: 600;
+}
+
+.project_list {
+  font-weight: 600;
 }
 
 .info {
-  margin-top: 5em;
+  margin-top: 3em;
   margin-right: 70px;
 
   display: flex;
@@ -220,7 +227,7 @@ Project General
   text-decoration: none;
   color: black;
   font-size: 15px;
-  font-weight: 500;
+  font-weight: 600;
 
   border-radius: 20px;
 
@@ -261,7 +268,7 @@ Project General
 }
 
 .link_to_product_video:after {
-  background-color: #8043d6;
+  background-color: #fdff6d;
 }
 
 .link_page:hover {
@@ -274,6 +281,32 @@ Project General
   margin: 70px 0px;
   overflow: visible;
   height: 500px;
+}
+
+/**********
+JS images
+**********/
+.j-img_fendi {
+  transform: translateX(-35em);
+  opacity: 0;
+}
+
+.j-img_thefork {
+  transform: translateY(15em);
+  opacity: 0;
+}
+
+.j-img_pingo {
+  opacity: 0;
+}
+
+.j-img_svolta {
+  transform: translateX(-500px);
+  opacity: 0;
+}
+
+.j-img_video {
+  opacity: 0;
 }
 
 
@@ -424,7 +457,7 @@ footer {
 @media (max-width: 1120px)  {
 
   .project_img {
-    transform: scale(.7);
+   height: 450px;
     
   }
 
