--- a/CSS/style_projects.css
+++ b/CSS/style_projects.css
@@ -42,7 +42,7 @@ body {
   background-color: #ffeee7;
 }
 .project_page_project_header_video{
-  background-color: #5617ae;
+  background-color: #fdff6d;
 }
 
 .project_page_project_description {
@@ -58,13 +58,19 @@ body {
   transform: translateY(-10em);
 }
 
+/**********
+JS
+**********/
+.j-projectpg_fendi_img {
+
+
+}
+
 .project_page_description_img_svolta {
   max-width: 30em;
 
   transform: translateY(-10em);
 }
-
-
 
 .project_page_project_list {
  /* margin: 10em;
@@ -74,16 +80,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-flow: column;
-
- /* background-color: rgb(236, 236, 236);
-  -webkit-box-shadow: 0px 0px 27px -1px rgba(0,0,0,0.23);
-  -moz-box-shadow: 0px 0px 27px -1px rgba(0,0,0,0.23);
-  box-shadow: 0px 0px 27px -1px rgba(0,0,0,0.23);*/
 }
-
-/*.project_page_project_list:nth-child(1,3) {
-  align-self: flex-start;
-}*/
 
 .project_page_project_img {
   padding: 40px;
@@ -153,7 +150,7 @@ body {
 }
 
 .back_to_main_video:hover{
-  background-color: #5617ae;
+  background-color: #fdff6d;
 }
 .go_see_it {
   margin: 20px;
@@ -181,7 +178,7 @@ body {
   height: 100%;
 
   z-index: -1;
-  background-color: #5617ae;
+  background-color: #fdff6d;
 
   transition: all .2s ease-out;
 }
@@ -192,7 +189,7 @@ body {
 
 .go_see_it:hover {
   border: 0;
-  background-color:#5617ae;
+  background-color:#fdff6d;
   color: white;
   transition: backgroundcolor 1s ease-in-out;
 }
